--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,8 @@ Temporary Items
 .apdisk
 
 build-MonsterSudoku-Desktop_Qt_5_9_1_MinGW_32bit-Debug/
+.pro
+.pro.user
+*.user
+MonsterSudoku/MonsterSudoku.pro.user
+MonsterSudoku/MonsterSudoku.pro.user
