--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,4 @@ build-MonsterSudoku-Desktop_Qt_5_9_1_MinGW_32bit-Debug/
 *.user
 MonsterSudoku/MonsterSudoku.pro.user
 MonsterSudoku/MonsterSudoku.pro.user
+*.pro
