--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,4 @@ build-MonsterSudoku-Desktop_Qt_5_9_1_MinGW_32bit-Debug/
 MonsterSudoku/MonsterSudoku.pro.user
 MonsterSudoku/MonsterSudoku.pro.user
 *.pro
+*.txt
